force-core/main/default/objects/Trigger_Handler__mdt/Trigger_Handler__mdt.object-meta.xml
<CustomObject>
    <description>Defines a trigger handler on an object</description>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger Handlers</pluralLabel>
</CustomObject>