force-core/main/default/objects/Trigger_Handler__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Apex class (including namespace if present) to invoke</description>
    <label>Apex Class</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>