force-core/main/default/objects/Trigger_Handler__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Object Type for this handler</description>
    <label>Object Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>