force-core/main/default/objects/Trigger_Handler__mdt/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <description>Type of the trigger (based on the TriggerOperation enum)</description>
    <label>Trigger Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>