force-core/main/default/objects/Trigger_Handler__mdt/listViews/Trigger_Handlers.listView-meta.xml
<ListView>
    <fullName>Trigger_Handlers</fullName>
    <columns>MasterLabel</columns>
    <columns>Object_Type__c</columns>
    <columns>Trigger_Type__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>Trigger Handlers</label>
</ListView>